Bug 470578 -  corrupt cookies.sqlite prevents db opening. r=sdwilsh, sr=mconnor, a=beltzner